--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(CodeBuilder)
 cmake_minimum_required(VERSION 2.8)
-aux_source_directory(. SRC_LIST)
+aux_source_directory(./src/ SRC_LIST)
 
 set(wxWidgets_CONFIGURATION mswu)
 find_package(wxWidgets COMPONENTS core base REQUIRED)
