--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.15)
 aux_source_directory(./src/ SRC_LIST)
 aux_source_directory(./src/builders/ SRC_LIST)
 aux_source_directory(./src/analyzers/ SRC_LIST)
+aux_source_directory(./src/gui/ SRC_LIST)
 
 set(wxWidgets_CONFIGURATION mswu)
 find_package(wxWidgets COMPONENTS core base REQUIRED)
